--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,20 @@
   }
 }
 
-.pictures{
+/* .allpictures{
   margin-top: 10px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+.pictures{
+  background-color: white;
+  padding: 10px;
+  margin: 10px;
+} */
+
+img{
+  height: 200px;
+  width: 250px;
 }
