--- a/src/App.css
+++ b/src/App.css
@@ -37,20 +37,15 @@
   }
 }
 
-/* .allpictures{
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.pictures{
-  background-color: white;
-  padding: 10px;
-  margin: 10px;
-} */
-
 img{
-  height: 200px;
-  width: 250px;
+  height: 300px;
+  width: 350px;
+  padding: 1px;
+  margin: 1px;
 }
+
+.myinsta{
+  font-family: 'Brush Script MT';
+  font-size: 200%;
+}
+
